# xlsxparser

./: .env.default  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
api/: consumer.py
api/billboards/: apps.py  models.py  urls.py  views.py
api/billboards/migrations/: 0001_initial.py
api/config/: settings.py  urls.py
api/templates/: upload.html
api/xlsx_uploader/: apps.py  aws.py  rabbit.py  urls.py  views.py
parser/: __main__.py  aws.py  config.py  parser.py  rabbit.py
parser/parser/: settings.py
src/config/: settings.py  urls.py
src/uploader/: aws.py  urls.py  views.py
xlsxparser/src/: settings.py
