[tool.poetry]
name = "xlsxparser"
version = "0.1.0"
description = ""
authors = ["ProtKsen <protcenko.kseniya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[flake8]
line-length = 99

[tool.djlint]
ignore="D018,H006"