[tool.poetry]
name = "xlsxparser"
version = "0.1.0"
description = ""
authors = ["ProtKsen <protcenko.kseniya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
boto3 = "^1.28.10"
pika = "^1.3.2"
pydantic = "^2.1.1"
openpyxl = "^3.1.2"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
mypy = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[flake8]
line-length = 99

[tool.djlint]
ignore="D018,H006"
